--- a/anniv/vercel.json
+++ b/anniv/vercel.json
@@ -1,6 +1,9 @@
 {
+  "version": 2,
+  "builds": [
+    { "src": "/*", "use": "@vercel/static" }
+  ],
   "routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }  // Redirects all paths to index.html
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
