--- a/anniv/vercel.json
+++ b/anniv/vercel.json
@@ -1,9 +1,12 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "/*", "use": "@vercel/static" }
-  ],
   "routes": [
-    { "src": "/.*", "dest": "/index.html" }
+    {
+      "src": "/",
+      "dest": "/"
+    },
+    {
+      "src": "/test",
+      "dest": "/"
+    }
   ]
 }
